# nestwatch-nvidia-nemo-agent

./: .dockerignore  .eslintrc.json  .gitignore  AI_PROMPT_CONTEXT.md  CHATGPT5_PROJECT_CONTEXT.md  COMMIT_MESSAGE.md  DOCKER.md  Dockerfile.backend  Dockerfile.frontend  GITHUB_CHECKLIST.md  NEMO_INSTALLATION_ANALYSIS.md  NEMO_INSTALLATION_RESULT.md  ORGANIZATION_COMPLETE.md  PLUGIN_MIGRATION.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  RELEASE_NOTES.md  config.py  credentials.py.example  docker-compose.yml  fix_ai_prompt_context.py  multi-provider.env.example  next.config.js  package-lock.json  package.json  pyproject.toml  sre_events.db  tsconfig.json  zscaler.env.example
backend/: app.py  requirements.txt
components/: ErrorBoundary.tsx  NestWatchDemo.tsx  ThemeContext.tsx  ThemeToggle.tsx
config/: anthropic_config.py  api_config.py  multi_provider_config.py  openai_config.py
docs/: CURSOR_AI_RULES.md  ERROR_HANDLING.md  NO_BS_RULES.md  README.md
middleware/: rate_limit.py
models/: corporate_config.json  offline_config.json
pages/: dashboard.tsx  index.tsx  theme-demo.tsx
plugins/: fallback_summaries.py  llm_cache.py  llm_circuit.py  llm_meter.py  multi_provider_llm.py  nemo_llm_provider.py  prompt_registry.py  simple_local_llm.py  sre_context_compactor.py  sre_tools_unified.py
schemas/: event_analysis_v1.json
scripts/: setup_anthropic.py  test-comprehensive-errors.sh  test-error-scenarios.js  test-error-scenarios.sh  verify-contrast.js
styles/: globals.css
tests/: test_quota_controls.py
types/: sre.ts
ui/: README-NestWatch.md
(+42 files in other folders)
